--- a/css/style.css
+++ b/css/style.css
@@ -100,11 +100,11 @@ a {
 
 .profile_card .slowgun {
     color: #333;
-    font-size: 32px;
-    line-height: 42px;
+    font-size: 24px;
+    line-height: 30px;
     letter-spacing: -2px;
     font-weight: 400;
-    margin-bottom: 30px;
+    margin-bottom: 12px;
 }
 
 .profile_card .info_box {
@@ -123,7 +123,7 @@ a {
     display: block;
     width: 180px;
     line-height: 48px;
-    font-size: 24px;
+    font-size: 20px;
     background-color: #333;
     border-radius: 24px;
     color: #fff;
@@ -133,7 +133,7 @@ a {
 .profile_card .info_box .info_value {
     color: #333;
     font-size: 24px;
-    font-weight: 400;
+    font-weight: 600;
     letter-spacing: -1px;
 }
 
@@ -461,7 +461,12 @@ a {
     color: #333;
     margin-bottom: 4px;
 }
-
+.info_text a{
+     color: #007AFF;
+}
+.info_text a:hover{
+    text-decoration: underline;
+}
 .apply {
     background: url('../images/apply.png') no-repeat;
 }
